<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".EditorActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:boxBackgroundColor="@color/design_default_color_on_primary">
        <EditText
            android:id="@+id/fullname"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:boxBackgroundColor="@color/design_default_color_on_primary">
        <EditText
            android:id="@+id/email"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:boxBackgroundColor="@color/design_default_color_on_primary">
        <EditText
            android:id="@+id/telpon"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:autofillHints="telpon"
            android:hint="@string/no_telpon"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:boxBackgroundColor="@color/design_default_color_on_primary">
        <EditText
            android:id="@+id/alamat"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:autofillHints="Alamat Anda"
            android:hint="@string/alamatanda"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnsave"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/save" />
</LinearLayout>